@@ -19,6 +19,10 @@ unity (7.4.0+16.04.20160526.1-0ubuntu2) UNRELEASED; urgency=medium
   * UnitySettings: Add dconf keys for disabling multitouch gestures (LP:
     #1589520)
 
+  [ Marco Trevisan (Treviño) ]
+  * LockScreenAcceleratorController: use key::Grabber to handle allowed
+    bindings (LP: #1438754)
+
  -- Eleni Maria Stea <elenimaria.stea@canonical.com>  Wed, 29 Jun 2016 18:06:42 +0200
 
 unity (7.4.0+16.04.20160526.1-0ubuntu1) xenial; urgency=medium
